--- a/package.json
+++ b/package.json
@@ -15,20 +15,32 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "expect": "^1.20.2",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-load-plugins": "^1.1.0",
     "gulp-webpack": "^1.5.0",
     "install": "^0.4.1",
+    "karma": "^1.1.2",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-browserstack-launcher": "^1.0.1",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.1.1",
+    "karma-mocha-reporter": "^2.0.5",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.5.3",
     "raw-loader": "^0.5.1",
     "react-dom": "^0.14.3",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.12.1"
   },
   "scripts": {
-    "build":  "webpack --progress --colors",
-    "build-prod":  "NODE_ENV=production webpack --progress --colors",
-    "build-all" : "npm run build && npm run build-prod"
+    "build": "webpack --progress --colors",
+    "build-prod": "NODE_ENV=production webpack --progress --colors",
+    "build-all": "npm run build && npm run build-prod",
+    "test-browser": "NODE_ENV=test karma start"
   }
 }
