--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-load-plugins": "^1.1.0",
     "gulp-webpack": "^1.5.0",
     "install": "^0.4.1",
+    "jsdom": "^9.5.0",
     "karma": "^1.1.2",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-browserstack-launcher": "^1.0.1",
@@ -33,6 +34,7 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^2.5.3",
     "raw-loader": "^0.5.1",
+    "react-addons-test-utils": "^15.3.1",
     "react-dom": "^0.14.3",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.12.1"
